// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading Components should be small if pass size small 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <ActivityIndicator
    animating={true}
    color="#00C0FF"
    hidesWhenStopped={true}
    size="small"
  />
</View>
`;

exports[`Loading Components should renders black if pass color black 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <ActivityIndicator
    animating={true}
    color="#000"
    hidesWhenStopped={true}
    size="large"
  />
</View>
`;

exports[`Loading Components should renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <ActivityIndicator
    animating={true}
    color="#00C0FF"
    hidesWhenStopped={true}
    size="large"
  />
</View>
`;
